Removed some IntelliJ warning.